[gd_scene load_steps=15 format=3 uid="uid://c5j4iogmongui"]

[ext_resource type="Script" path="res://UI/main_menu.gd" id="1_6g7qq"]
[ext_resource type="Texture2D" uid="uid://cj04h2tkwcmdn" path="res://Art/Background/Yellow.png" id="2_whvy8"]
[ext_resource type="Texture2D" uid="uid://eisu1iuslh5i" path="res://Art/Items/tortilla/tortilla2.png" id="3_lnhnm"]
[ext_resource type="Texture2D" uid="uid://h430j0rdylpb" path="res://Art/ui/pointer.png" id="4_001ye"]
[ext_resource type="FontFile" uid="uid://wb0p4l64tomf" path="res://Art/font/pressStart.ttf" id="5_finsc"]

[sub_resource type="Theme" id="Theme_v5gtf"]
default_font_size = 45

[sub_resource type="Theme" id="Theme_1khvn"]
default_font_size = 45

[sub_resource type="Theme" id="Theme_vpid8"]
default_font_size = 45

[sub_resource type="Animation" id="Animation_ctmlb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ptrStart:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(570, 400)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ptrOption:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(610, 500)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ptrQuit:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(610, 600)]
}

[sub_resource type="Animation" id="Animation_x1w0k"]
resource_name = "moving"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ptrStart:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(570, 400), Vector2(610, 400)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ptrOption:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(570, 500), Vector2(610, 500)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ptrQuit:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(570, 600), Vector2(610, 600)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_da5th"]
_data = {
"RESET": SubResource("Animation_ctmlb"),
"moving": SubResource("Animation_x1w0k")
}

[sub_resource type="Animation" id="Animation_ekyay"]
resource_name = "new_animation"
length = 60.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 60),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-118, -1659), Vector2(-2441, -25.0001)]
}

[sub_resource type="Animation" id="Animation_oschm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-118, -1659)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_83kqh"]
_data = {
"RESET": SubResource("Animation_oschm"),
"new_animation": SubResource("Animation_ekyay")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6g7qq")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -118.0
offset_top = -1659.0
offset_right = 2221.0
offset_bottom = 423.0
scale = Vector2(1.6055, 1.23901)
texture = ExtResource("2_whvy8")
stretch_mode = 1

[node name="Tortilla2" type="Sprite2D" parent="TextureRect"]
position = Vector2(1517.71, 554.341)
rotation = 1.1973
scale = Vector2(0.545, 0.475)
texture = ExtResource("3_lnhnm")

[node name="Tortilla3" type="Sprite2D" parent="TextureRect"]
position = Vector2(2117, 273)
scale = Vector2(0.545, 0.475)
texture = ExtResource("3_lnhnm")

[node name="Tortilla4" type="Sprite2D" parent="TextureRect"]
position = Vector2(1950, 547)
rotation = -3.2306
scale = Vector2(0.545, 0.475)
texture = ExtResource("3_lnhnm")

[node name="Tortilla5" type="Sprite2D" parent="TextureRect"]
position = Vector2(1292.15, 741.653)
rotation = -2.51327
scale = Vector2(0.545, 0.475)
texture = ExtResource("3_lnhnm")

[node name="Tortilla6" type="Sprite2D" parent="TextureRect"]
position = Vector2(1925, 148)
rotation = 3.35103
scale = Vector2(0.545, 0.475)
texture = ExtResource("3_lnhnm")

[node name="Tortilla7" type="Sprite2D" parent="TextureRect"]
position = Vector2(1042.66, 1016.13)
scale = Vector2(0.661785, 0.754043)
texture = ExtResource("3_lnhnm")

[node name="Tortilla8" type="Sprite2D" parent="TextureRect"]
position = Vector2(1496.73, 958.023)
rotation = -1.1973
scale = Vector2(0.545, 0.475)
texture = ExtResource("3_lnhnm")

[node name="Tortilla9" type="Sprite2D" parent="TextureRect"]
position = Vector2(1189.03, 1047.61)
scale = Vector2(0.596385, 0.604729)
texture = ExtResource("3_lnhnm")

[node name="Tortilla10" type="Sprite2D" parent="TextureRect"]
position = Vector2(1652.44, 733.65)
scale = Vector2(0.545, 0.475)
texture = ExtResource("3_lnhnm")

[node name="Tortilla11" type="Sprite2D" parent="TextureRect"]
position = Vector2(1038.48, 794.315)
rotation = 0.71733
scale = Vector2(0.477369, 0.465967)
texture = ExtResource("3_lnhnm")

[node name="Tortilla12" type="Sprite2D" parent="TextureRect"]
position = Vector2(911.084, 1175.19)
rotation = 0.598648
scale = Vector2(0.412642, 0.411025)
texture = ExtResource("3_lnhnm")

[node name="Tortilla13" type="Sprite2D" parent="TextureRect"]
position = Vector2(613.72, 1101.68)
rotation = -1.26885
scale = Vector2(0.488229, 0.439902)
texture = ExtResource("3_lnhnm")

[node name="Tortilla14" type="Sprite2D" parent="TextureRect"]
position = Vector2(671.907, 1512.96)
rotation = -0.598648
scale = Vector2(0.312985, 0.302067)
texture = ExtResource("3_lnhnm")

[node name="Tortilla15" type="Sprite2D" parent="TextureRect"]
position = Vector2(141.233, 1493.99)
scale = Vector2(0.294299, 0.281889)
texture = ExtResource("3_lnhnm")

[node name="Tortilla16" type="Sprite2D" parent="TextureRect"]
position = Vector2(704.918, 1301.91)
scale = Vector2(0.344128, 0.257677)
texture = ExtResource("3_lnhnm")

[node name="Tortilla17" type="Sprite2D" parent="TextureRect"]
position = Vector2(1492.99, 1078.28)
scale = Vector2(0.545, 0.475)
texture = ExtResource("3_lnhnm")

[node name="Tortilla18" type="Sprite2D" parent="TextureRect"]
position = Vector2(485.206, 1271.98)
scale = Vector2(0.545, 0.475)
texture = ExtResource("3_lnhnm")

[node name="Tortilla19" type="Sprite2D" parent="TextureRect"]
position = Vector2(1040.79, 1293.78)
scale = Vector2(0.545, 0.475)
texture = ExtResource("3_lnhnm")

[node name="Tortilla20" type="Sprite2D" parent="TextureRect"]
position = Vector2(777.948, 1069.4)
scale = Vector2(0.545, 0.475)
texture = ExtResource("3_lnhnm")

[node name="Tortilla21" type="Sprite2D" parent="TextureRect"]
position = Vector2(924.32, 1487.48)
scale = Vector2(0.545, 0.475)
texture = ExtResource("3_lnhnm")

[node name="div" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 663.0
offset_top = 355.0
offset_right = 1208.0
offset_bottom = 670.0
alignment = 1

[node name="Empezar" type="Button" parent="div"]
layout_mode = 2
size_flags_vertical = 3
focus_previous = NodePath("../Salir")
theme = SubResource("Theme_v5gtf")
text = "Play"

[node name="Opciones" type="Button" parent="div"]
layout_mode = 2
size_flags_vertical = 3
theme = SubResource("Theme_1khvn")
text = "Options"

[node name="Salir" type="Button" parent="div"]
layout_mode = 2
size_flags_vertical = 3
focus_next = NodePath("../Empezar")
theme = SubResource("Theme_vpid8")
text = "Quit"

[node name="ptrStart" type="Sprite2D" parent="."]
position = Vector2(570, 400)
rotation = 1.5708
scale = Vector2(5, 5)
texture = ExtResource("4_001ye")

[node name="ptrOption" type="Sprite2D" parent="."]
position = Vector2(610, 500)
rotation = 1.5708
scale = Vector2(5, 5)
texture = ExtResource("4_001ye")

[node name="ptrQuit" type="Sprite2D" parent="."]
position = Vector2(610, 600)
rotation = 1.5708
scale = Vector2(5, 5)
texture = ExtResource("4_001ye")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "moving"
libraries = {
"": SubResource("AnimationLibrary_da5th")
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 102.0
offset_top = 99.0
offset_right = 943.0
offset_bottom = 258.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("5_finsc")
theme_override_font_sizes/normal_font_size = 100
text = "OMELEAT!"
fit_content = true
scroll_active = false
scroll_following = true

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
autoplay = "new_animation"
libraries = {
"": SubResource("AnimationLibrary_83kqh")
}

[connection signal="pressed" from="div/Empezar" to="." method="_on_empezar_pressed"]
[connection signal="pressed" from="div/Opciones" to="." method="_on_opciones_pressed"]
[connection signal="pressed" from="div/Salir" to="." method="_on_salir_pressed"]
